[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptiq"
version = "0.1.0"
description = "Prompt intelligence for Claude Code — detect waste, cut cost"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
promptiq = "promptiq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["promptiq"]
